src/styles/halpes.css
/* ... */
.contact-page__contact-list li .text {
  margin-left: 20px;
}

.contact-page__contact-list li .text p {
  font-size: 16px;
  margin: 0;
  line-height: 20px;
}

.contact-page__contact-list li .text a {
  font-size: 20px;
  color: var(--thm-black);
  font-weight: 800;
  line-height: 30px;
  transition: all 500ms ease;
}

.contact-page__contact-list li .text a:hover {
  color: var(--thm-blue);
}

.contact-page__contact-list li .text h5 {
  font-size: 20px;
  color: var(--thm-black);
  font-weight: 800;
  line-height: 30px;
}

.contact-page__form {
  position: relative;
  display: block;
  margin-left: -30px;
}

.contact-page__main-form {
  position: relative;
  display: block;
  background: #eff5f4;
  padding: 60px;
}

.contact-page__main-form .row {
  --bs-gutter-x: 10px;
}

.contact-page__input-box {
  position: relative;
  display: block;
}

.contact-page__input-box input[type="text"],
.contact-page__input-box input[type="email"] {
  height: 67px;
  width: 100%;
  border: none;
  padding: 0 30px;
  margin-bottom: 10px;
  border-radius: 0;
  outline: none;
  font-size: 16px;
  font-weight: 700;
  color: var(--thm-gray);
  background-color: rgb(255, 255, 255);
  box-shadow: 0px 0px 30px 0px rgb(0, 0, 0, 0.07);
}

.contact-page__input-box textarea {
  font-size: 16px;
  height: 192px;
  width: 100%;
  padding: 20px 30px 30px;
  border: none;
  border-radius: 0px;
  outline: none;
  background-color: rgb(255, 255, 255);
  box-shadow: 0px 0px 30px 0px rgb(0, 0, 0, 0.07);
  font-weight: 700;
  padding-top: 10px;
  display: block;
  color: var(--thm-gray);
}

.contact-page__btn {
  margin-top: 10px;
}

/*--------------------------------------------------------------
# Contact Page Google Map
--------------------------------------------------------------*/
.contact-page-google-map {
  position: relative;
  display: block;
}

.contact-page-google-map__one {
  position: relative;
  display: block;
  border: none;
  height: 560px;
  width: 100%;
}

/*--------------------------------------------------------------
# About Page
--------------------------------------------------------------*/
.about-page {
  position: relative;
  display: block;
  padding: 100px 0 95px;
}

.about-page__left {
  position: relative;
  display: block;
  margin-right: 60px;
}

.about-page__img {
  position: relative;
  display: block;
}

.about-page__img:before {
  position: absolute;
  bottom: -10px;
  left: 0;
  right: 0;
  content: "";
  background-color: var(--thm-blue);
  height: 10px;
}

.about-page__img img {
  width: 100%;
}

.about-page__trusted {
  position: absolute;
  bottom: 60px;
  background-color: rgb(255, 255, 255);
  box-shadow: 0px 0px 30px 0px rgb(0, 0, 0, 0.1);
  width: 255px;
  padding: 45px 47px 47px;
  left: -50px;
}

.about-page__trusted h3 {
  font-size: 24px;
  font-weight: 900;
  line-height: 28px;
}

.about-page__trusted h3 span {
  color: var(--thm-blue);
}

.about-page__right {
  position: relative;
  display: block;
  margin-left: -20px;
}

.about-page__right .section-title {
  margin-bottom: 27px;
}

.about-page__right-text {
  font-size: 16px;
  margin: 0;
}

.about-page__right-title {
  font-size: 24px;
  color: var(--thm-blue);
  font-weight: 900;
  line-height: 34px;
  margin-top: 32px;
  margin-bottom: 39px;
}

.about-five__progress {
  display: flex;
  align-items: center;
}

.about-five__progress-wrap {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 30px;
}

@media (min-width: 768px) {
  .about-five__progress-wrap {
    grid-template-columns: repeat(2, 280px);
  }
}

.about-five__progress-box {
  position: relative;
  display: inline-block;
}

.about-five__progress-box canvas {
  transform: rotate(90deg);
}

.about-five__progress-box span {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  transform: translateY(-60%) translateX(-50%);
  font-size: 24px;
  font-weight: 900;
  line-height: 1;
  color: var(--thm-black);
}

.about-five__progress h3 {
  margin: 0;
  font-size: 20px;
  line-height: 30px;
  font-weight: 900;
  color: var(--thm-black);
  width: 70px;
  margin-left: 20px;
}

/*--------------------------------------------------------------
# About Page Testimonial
--------------------------------------------------------------*/
.about-page-testimonial {
  margin-top: 0;
  padding-top: 100px;
}

/*--------------------------------------------------------------
# About Page Counter
--------------------------------------------------------------*/
.about-page-counter {
  margin-top: -50px;
}

/*--------------------------------------------------------------
# Team Page
--------------------------------------------------------------*/
.team-page {
  padding-bottom: 40px;
}

.team-page .team-one__single {
  margin-bottom: 60px;
}

/*--------------------------------------------------------------
# Funding 
--------------------------------------------------------------*/
.funding-section {
  position: relative;
  display: flex;
  background-color: #fff;
  max-width: 100%;
  align-items: center;
  justify-content: space-evenly;
  display: flex;
}

.funding-section__container {
  padding: 0 0 0 0;
}

.funding-section__single {
  position: relative;
  display: flex;
  margin-bottom: 5px;
  margin-top: 5px;
  align-items: center;
  overflow: hidden; 
  justify-content: center;
  width: 100%;
  height: 100%;
}

.funding-section__img-box {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.funding-section__img-box:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.funding-section__img-box img {
  width:100%;
  height:100%;
}


/*--------------------------------------------------------------
# Galley Page
--------------------------------------------------------------*/
.gallery-page {
  position: relative;
  display: block;
  padding: 100px 0 70px;
}

.gallery-page__single {
  position: relative;
  display: block;
  margin-bottom: 30px;
}
/* ... */

